syntax = "proto3";

option csharp_namespace = "UserGrpc";

package userGrpc;

service UserGrpcService {
  rpc CheckUser (CheckUserRequest) returns (CheckUserResponse);
}

message CheckUserRequest {
  string user_id = 1;
}

message CheckUserResponse {
  bool exists = 1;
}
